--- a/gui/html/css/main.css
+++ b/gui/html/css/main.css
@@ -46,7 +46,7 @@ table td {
 
 .footerinner {margin:6px;}
 
-#footer .searches {
+#footer .searches, #footer .tags, #footer .jumps {
 	padding-top:5px;
 	font-size:10px;
 	font-family: arial, sans-serif;
@@ -56,10 +56,15 @@ table td {
 	overflow: hidden;
 }
 
+#footer .tags .label, #footer .jumps .label {
+	display: inline;
+}
+
 #footer .searches a {padding-right:6px;}
 
 #footer .over {
 	position:absolute;
+	top: 6px;
 	right:7px;
 	z-index:7;
 	padding-left:20px;
