--- a/gui/html/css/tooltip.css
+++ b/gui/html/css/tooltip.css
@@ -10,7 +10,7 @@
 	position:absolute;
 	z-index:100;
 	width:100%;
-	margin: 10px 0px;
+	margin: 15px 0px 10px 0px;
 }
 
 .tooltip > .left, .tooltip > .right {-webkit-box-flex:0.5;}
@@ -18,7 +18,7 @@
 .tooltip > .content {
 	-moz-border-radius:10px;
 	border-radius: 10px;
-	background: rgba(0,0,0,0.7);
+	background: rgba(0,0,0,0.9);
 	color: white;
 	position:absolute;
 	padding: 3px 7px;
